<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="vyst.business.activites.RegisterShopkeeper">


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/back"
        android:padding="@dimen/_16sdp"
        />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_99sdp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_below="@+id/img_logo"


        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"


            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/colorWhite"
                style="@style/CustomTextAppearance.Regular"

                />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:color/transparent"

                android:hint="@string/enter_name"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColorHint="@color/colorLightGrey"
                android:textCursorDrawable="@null"


                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorWhite"
                android:layout_marginTop="@dimen/_2sdp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                style="@style/CustomTextAppearance.Regular"
                />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionNext"
                android:maxLines="1"
                android:maxLength="10"
                android:singleLine="true"
                android:background="@android:color/transparent"

                android:inputType="number"
                android:hint="@string/enter_your_mobile_no"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColorHint="@color/colorLightGrey"
                android:textCursorDrawable="@null"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorWhite"
                android:layout_marginTop="@dimen/_2sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/colorWhite"
                style="@style/CustomTextAppearance.Regular"
                />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@android:color/transparent"

                android:hint="@string/enter_your_full_address"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColorHint="@color/colorLightGrey"
                android:textCursorDrawable="@null"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorWhite"
                android:layout_marginTop="@dimen/_2sdp"
                />


            <Button
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"

                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"

                android:textColor="@color/colorPrimary"
               android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:text="@string/submit"
                style="@style/CustomTextAppearance.Semibold"
                android:background="@drawable/button_bg_filled"
                />


        </LinearLayout>


    </ScrollView>
    

</RelativeLayout>
